--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Andrea Packey porfolio and resume.">
+    <meta name="description" content="Andrea Packey portfolio and resume.">
     <meta name="author" content="Devcrud">
     <title>Andrea Packey Portfolio</title>
     <!-- font icons -->
