--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container-fluid">
         <div id="about" class="row about-section">
             <div class="col-lg-4 about-card">
-                <h3 class="font-weight-light">Who am I ?</h3>
+                <h3 class="font-weight-light">Who Am I ?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">A Graphic Designer Located In California</h5>
                 <p class="mt-20">My hobbies include calligraphy, painting, anything involving my dog and D&D.</p>
@@ -91,7 +91,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-files icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Print Design</h6>
-                        <p class="subtitle"> Flyers, ads, brochures, trifolds, posters, banners and more.</p>
+                        <p class="subtitle"> Flyers, Ads, Brochures, Trifolds, Posters, Banners and More</p>
                         <hr>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-desktop icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Website Design</h6>
-                        <p class="subtitle">Primary using HTML, CSS, Github, VIS and bootstrap.</p>
+                        <p class="subtitle">Primary using HTML, CSS, Github, VIS and Bootstrap.</p>
                         <hr>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                         <div class="card-body">
                             <h6 class="title text-danger">2015 - 2019</h6>
                             <P>BFA Graphic Design</P>
-                            <P class="subtitle">My focus was on print and typography.</P>
+                            <P class="subtitle">My focus was on print and typography while going to school.</P>
                             <hr>
                             <h6 class="title text-danger">2014 - 2015</h6>
                             <P>State Board of Cosmetology, Nail Technician</P>
@@ -293,7 +293,7 @@
                         </div>
                         <div class="col-7 text-left py-3">
                             <h1 class="text-danger font-weight-bold font40">2k+</h1>
-                            <p class="text-light mb-1">Coffee Drinked</p>
+                            <p class="text-light mb-1">Coffee Drank</p>
                         </div>
                     </div>
                 </div>
@@ -311,7 +311,7 @@
                             <i class="ti-vector text-danger" aria-hidden="true"></i>
                         </div>
                         <div class="card-body px-4 py-3">
-                            <h5 class="mb-3 card-title text-dark">Renew old logos</h5>
+                            <h5 class="mb-3 card-title text-dark">Renew Old Logos</h5>
                             <P class="subtitle">Tracing old, bit-crushed, logos to make them new again. New logo will be givin in both a pdf and png file. I can also provide specfic file types if requested, just let me know.</P>
                         </div>
                     </div>
@@ -323,7 +323,7 @@
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Logo Design</h5>
-                            <P class="subtitle">Crisp, high quality logo designs made in Illustrator.Includes three revisions, further revisions will be at a additional charge. New logo will be givin in both a pdf and png file. I can also provide specfic file types if requested, just let me know. </P>
+                            <P class="subtitle">Crisp, high quality logo designs made in Illustrator. Includes three revisions, further revisions will be at a additional charge. New logo will be givin in both a pdf and png file. I can also provide specfic file types if requested, just let me know. </P>
                         </div>
                     </div>
                 </div>
@@ -334,7 +334,7 @@
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Print Design</h5>
-                            <P class="subtitle">Projects include flyers, trifolds, banners, posters, magazines ads, wedding invitations, business cards and more! Most designs are charged hourly. Please contact me if you have a specific project in mind. </P>
+                            <P class="subtitle">Projects include: flyers, trifolds, banners, posters, magazines ads, wedding invitations, business cards and more! Most designs are charged hourly. Please contact me if you have a specific project in mind. </P>
                         </div>
                     </div>
                 </div>
