--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
                             <P>Freelance</P>
                             <P class="subtitle">Projects so far have included print based layouts such as: flyers, brochures and trifolds.</P>
                             <hr>
+			    <h6 class="title text-danger">2023 - 2023</h6>
+                            <P>Prepress Technician</P>
+                            <P class="subtitle">During my time at Landmark Grafix I would intake and set up of artwork for print/production using Adobe suite and Microsoft office. I would work with and maintain large format printers, CNC routers, cutters, and production equipment to produce graphics on various substrates. While doing so I would also be working with and understanding various substrates typical to the sign, marketing, and advertising industry.</P>
+                            <hr>
                             <h6 class="title text-danger">2020 - 2022</h6>
                             <P>Drafter/ Designer</P>
                             <P class="subtitle">At Safety Network Inc I had graphic design projects which included: brochures, logo design, trifolds, business cards, name plates, flyers & banners. </P> 
