--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <ul class="mt40 info list-unstyled">
                     <li><span>Email</span> : andreapackey@gmail.com</li>
                     <li><span>Phone</span> : + (805) 801-6842</li>
-                    <li><span>Address</span> :  1212 Willow Ave, Martinez CA 94553</li>
+                    <li><span>Address</span> :  4105 N Bengston Ave, Fresno CA 93705</li>
                 </ul>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="https://www.linkedin.com/in/andrea-packey-b1a282182/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
